add: startup details

--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,4 @@ AUTH_GITHUB_ID="Ov23liEFwsr0T5IJSVuD"
 AUTH_GITHUB_SECRET="349d1a59fe35094fe72339d2a14f74d1813eec01"
 NEXT_PUBLIC_SANITY_PROJECT_ID="teoi9p1w"
 NEXT_PUBLIC_SANITY_DATASET="production"
+NEXT_PUBLIC_SANITY_API_VERSION="vX"
